--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.5
+  firebase_core: ^2.2.5
+  firebase_auth: ^4.4.2
 
 dev_dependencies:
   flutter_test:
