--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_maps_flutter: ^2.2.5
   firebase_core: ^2.2.5
   firebase_auth: ^4.4.2
+  cloud_firestore: ^4.5.2
 
 dev_dependencies:
   flutter_test:
