--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.2.5
   firebase_auth: ^4.4.2
   cloud_firestore: ^4.5.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
